--- a/app/design/adminhtml/Bappa/admintheme/Magento_Backend/layout/default.xml
+++ b/app/design/adminhtml/Bappa/admintheme/Magento_Backend/layout/default.xml
@@ -10,7 +10,7 @@
                               <argument name="logo_img_height" xsi:type="number">300</argument>
                               <argument name="show_part" xsi:type="string">logo</argument>
                               <argument name="edition" translate="true" xsi:type="string">Community Edition</argument>
-                              <argument name="logo_image_src" xsi:type="string">images/menu-logo.png</argument>
+                              <argument name="logo_image_src" xsi:type="string">images/menu-logo.svg</argument>
                         </arguments>
                   </referenceBlock>
             </referenceContainer>
